Formatação da Ficha de Atendimento

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div>
           <label for="endereco">Endereço:</label>
           <input type="text" id="endereco" required>
-          <div class="error-message hidden" id="errorEndereco">Endereço  é obrigatório (ex.: Rua do Príncipe, 50, Soledade, Recife-PE).</div>
+          <div class="error-message hidden" id="errorEndereco">Endereço é obrigatório (ex.: Rua do Príncipe, 50, Soledade, Recife-PE).</div>
         </div>
 
         <div>
@@ -58,7 +58,8 @@
      <!-- Tela Final de Exibição da Ficha -->
       <div class="final-ficha-container hidden" id="finalFichaContainer">
         <h3>Ficha de Atendimento:</h3>
-        <pre id="fichaContent"></pre>
+        <!-- <pre id="fichaContent"></pre> -->
+        <div id="fichaContentFormatted"></div>
       </div>
   </div>
 </body>
